--- a/style.css
+++ b/style.css
@@ -12,10 +12,13 @@ body {
 }
 
 .navbar {
-  border-bottom: 2px solid #333;
-  padding: 15px;
+  border-bottom: 1px solid #333;
+  /* padding: 15px; */
   text-align: center;
   margin-bottom: 0;
+  padding-bottom: 0%;
+  padding-top: 0%;
+  margin-top: 0%;
 }
 
 .brand {
@@ -28,7 +31,7 @@ body {
   margin: 10px auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  row-gap: 10px;
+  row-gap: 16px;
   column-gap: 5px;
 }
 
@@ -151,4 +154,36 @@ body {
 
 .winner {
   animation: rainbow 4s infinite linear;
+}
+
+img {
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+  width: 15rem;
+}
+
+.gradient {
+  background: linear-gradient(90deg, rgba(255,23,228,1) 0%, rgba(134,251,251,1) 100%);
+  height: 2px;
+}
+
+.instruction h2{
+  font-family: cursive;
+  font-size: x-large;
+  text-align: center;
+  padding-top: 2rem;
+}
+
+.instruction p {
+  font-family: cursive;
+  text-align: center;
+  align-items: center;
+  font-size: 1.2rem;
+  
+}
+
+.instruction ul li {
+  font-family: cursive;
+  text-align: center;
+  font-size: 1.2rem;
 }
